# pulsenet2.0-bfx

./: README.md
main/: Azure.config  CreateMasterOutput.py  Dockerfile  README.md  Scicomp_test.sh  custom_input.csv  main.nf  scicomp_fullWorkflow.config  scicomp_main.nf
main/dbs/: O_type.fsa
main/dbs/RGDv3/: 03-427.fasta  08-2459_SAN5292A5_Vibrio_metoecus.fasta  2010EL-1786_SAN4854A5_Vibrio_cholerae.fasta  2010L-2059.fasta  2011L-2626.fasta  2011V-1169_SAN4854A53_Vibrio_metoecus.fasta  2012L-5524.fasta  2012V-1020_SAN4854A41_Vibrio_metschnikovii.fasta  2013D-9606-M3235-15-038.fasta  2014D-0028_Campylobacter_coli.fasta  2014L-6256.fasta  2014L-6393.fasta  2409-02_SAN4854A36_Vibrio_cincinnatiensis.fasta  2521_89_SAN4854A10_Vibrio_tarriae.fasta  82-40.fasta  97-608_C_fetus_venerealis.fas  CDC69094_GCA_001879605.1_Clostridium_botulinum.fasta  C_hyointestinalis_hyointestinalis_4092_final.fasta  D0133-M947-15-030-Aug27.fasta  D1914-M347-15-037.fasta  F4080_ROA7576A1.032077.circlator.quiver.032552.fasta  F5761.fasta  G4599.fasta  H0996.fasta  J0099.fasta  LMG11760.fasta  NC_009707.Cdoylei.fasta  O75TS_SAN5445A2_Vibrio_paracholerae.fasta  PAM55.fasta  RM2100.fasta  SLCC5334.fasta  species.tsv
main/dbs/SALM-ANI-References/: species.tsv
main/dbs/cbot_toxintyping_db/: BONTreferences.fasta
main/dbs/pathotypefinder_db/: Stx subtypes 03262015.fasta  aggR.fasta  concat_sequences.fasta  daec.fsa  eaec.fsa  eiec.fsa  epec.fsa  etec.fasta  etec.fsa  stec.fsa  virulence_small.fsa
main/dbs/plasmidfinder_db/: concat_sequences.fasta
main/dbs/stxtyper/: final_holotoxins.fasta
main/dbs/virulencefinder_db/: notes.txt  virulence_entfm_entls.fsa
main/modules/: AlleleCalling.nf  adx_analysis_data.nf  allele_naming.nf  ani.nf  cbot_toxintyper.nf  collect_results.nf  correct_assembly.nf  deinterleave.nf  download_samples.nf  fetch_paths.nf  find_genes.nf  generate_assembly.nf  ispcr.nf  kma.nf  midas.nf  mlst.nf  pathotypefinder.nf  plasmidfinder.nf  prepare_reads.nf  seqsero.nf  shigacheck.nf  shigapass.nf  shigeifinder.nf  stxcondenser.nf  stxtyper.nf  vibrio_typer.nf  virulencefinder.nf
main/scripts/: shigacheck1.py
main/tests/files/: MLST_CC.py  ST_CC_mapping.json  adx_analysis_data.py  genotypeFormatter.py  initialMasterOut.json  read1.fastq
main/utils/: utils.nf
main/workflows/: assembly_only.nf  campy.nf  cbot.nf  crono.nf  listeria.nf  salm.nf  shigella.nf  stec.nf  stec_assembly_typing.nf  vibrio.nf  yersinia.nf
processes/AlleleCalling/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
processes/AlleleCalling/src/: __init__.py  allele_calling.py  allele_filtering.py  inputs.py  models.py  outputs.py  results.py  sam_flags.py  stubs.py  tools.py  transformers.py
processes/AlleleCalling/tests/: conftest.py  test_sam_flags.py
processes/allele_naming/: Dockerfile  README.md  pyproject.toml
processes/allele_naming/src/: __init__.py  allele_cache.py  allele_calls.py  allele_naming.py  encryption.py  inputs.py  models.py  nomenclature_itf.py  nomenclature_service.py
processes/ani/: Dockerfile  ani-m_1.pl  conda.yaml  pyproject.toml
processes/ani/env/: ani.yaml
processes/ani/src/: __init__.py  ani.py  genotyping.py  genotyping_config.py  inputs.py  outputs.py
processes/cbot_toxintyper/: Dockerfile
processes/cbot_toxintyper/src/: __init__.py  cbot_toxintyping.py  config.py  genotype_classes.py  inputs.py  ispcr.py  ispcr_config.py  outputs.py
processes/correct_assembly/: CHANGELOG.md  Dockerfile  README.md  conda.yaml  pyproject.toml
processes/correct_assembly/src/: __init__.py  assembly_cleaning.py  correct_assembly.py  inputs.py  outputs.py
processes/find_genes/: Dockerfile  README.md  conda.yaml  pyproject.toml
processes/find_genes/src/: __init__.py  find_genes.py  inputs.py  outputs.py  stub.py
processes/generate_assembly/: Dockerfile  README.md  conda.yaml  pyproject.toml
processes/generate_assembly/src/: __init__.py  generate_assembly.py  (+2 more)
processes/ispcr/: Dockerfile  pyproject.toml
processes/kma/: Dockerfile  conda.yaml  pyproject.toml  runextern.py
processes/midas/: Dockerfile  conda.yaml  pyproject.toml
processes/mlst/: Dockerfile  README.md  conda.yaml  pyproject.toml  scheme_species_map.tab
processes/mlst/src/: __init__.py  allele_issues.py  archive_bah.py  inputs.py  mlst.py  organism_comparison.py  outputs.py
processes/pathotypefinder/: Dockerfile  pyproject.toml
processes/pathotypefinder/src/: __init__.py  config.py  inputs.py  outputs.py  pathotypefinder.py
processes/plasmidfinder/: Dockerfile  pyproject.toml
processes/prepare_reads/: CHANGELOG.md  Dockerfile  README.md  conda.yaml  pyproject.toml
processes/seqsero/: Dockerfile  conda.yaml  pyproject.toml
processes/stxcondenser/: Dockerfile  pyproject.toml
processes/stxtyper/: Dockerfile  conda.yaml  pyproject.toml
processes/vibrio_typer/: Dockerfile  pyproject.toml
processes/vibrio_typer/src/: __init__.py  config.py  inputs.py  outputs.py  vibrio_virulence_finder.py
(+86 files in other folders)
